デザイン更新 wip

--- a/app/assets/stylesheets/blocks/_category.sass
+++ b/app/assets/stylesheets/blocks/_category.sass
@@ -7,7 +7,7 @@
   justify-content: space-between
 .categories__label
   flex: 1
-  +text-block(.8rem 2rem, $reversal-text center)
+  +text-block(.75rem 2rem, $reversal-text center)
 .categories__item
   display: flex
   justify-content: space-between
@@ -56,4 +56,4 @@
   border-radius: 50%
   +media-breakpoint-down(sm)
     margin-right: .5rem
-    +size(24px)
+    +size(1.5rem)
