--- a/app/assets/stylesheets/blocks/_mobile-global-nav.sass
+++ b/app/assets/stylesheets/blocks/_mobile-global-nav.sass
@@ -1,6 +1,6 @@
 .mobile-global-nav
   +fixed(right 0, top 0)
-  +size(280px, 100%)
+  +size(17.5rem 100%)
   background-color: $base-color
   display: none
   +media-breakpoint-down(sm)
@@ -21,7 +21,7 @@
   +text-block(1rem 1.5, $text)
   +padding(vertical, .5rem)
   +padding(horizontal, 1rem)
-  border-bottom: #ccc solid 1px
+  border-bottom: #ccc solid .0625rem
 
 .mobile-global-nav-cerrent-user__icon-link-items
   text-align: center
@@ -30,12 +30,12 @@
   display: inline-block
 .mobile-global-nav-cerrent-user__icon-link
   +block-link
-  +size(32px)
-  +text-block(1rem 32px, $reversal-text center)
+  +size(2rem)
+  +text-block(1rem 2rem, $reversal-text center)
   border-radius: 50%
   background-color: rgba(white, .4)
   +margin(horizontal, .5rem)
 
 .close-drawer-overlay
-  right: 280px
+  right: 17.5rem
   z-index: 1
