--- a/app/assets/stylesheets/blocks/_page.sass
+++ b/app/assets/stylesheets/blocks/_page.sass
@@ -1,15 +1,13 @@
-.page
-  min-height: 90vh
 .page-header
   background-color: #1E88E5
-  +padding(vertical, 1.4rem)
+  +padding(vertical, 1.375rem)
   margin-bottom: 2rem
 .page-header__container
   +position(relative)
 .page-header__title
-  +text-block(1.8rem 1.4, white)
+  +text-block(1.75rem 1.4, white)
   img
-    +size(40px, auto)
+    +size(2.5rem auto)
 .page-header__button
   +position(absolute, right 0, top 50%)
-  margin-top: -16px
+  margin-top: -1rem
