--- a/app/assets/stylesheets/blocks/_user.sass
+++ b/app/assets/stylesheets/blocks/_user.sass
@@ -7,9 +7,9 @@
   padding-left: 1rem
 .users-item__icon-image
   border-radius: 50%
-  +position(absolute, left -16px, top -6px)
+  +position(absolute, left -1rem, top -.375rem)
   +size(64px)
-  border: solid #1E88E5 4px
+  border: solid $main-color .25rem
   background-color: white
 .users-item__name-link
   color: $reversal-text
