--- a/app/assets/stylesheets/settings/variables/_0colors.sass
+++ b/app/assets/stylesheets/settings/variables/_0colors.sass
@@ -1,7 +1,7 @@
-$main-color: #b9d5da
+$main-color: #f96b3b
 $accent-color: blue
 $base-color: white
-$background-color: #eee
+$background-color: #e2e5dc
 $reversal-text: white
 $text: #272b2d
 
@@ -11,8 +11,11 @@ $gray-light: #818a91
 $gray-lighter: #eceeef
 $gray-lightest: #f7f7f9
 
-$brand-primary: #6b9bcd
-$brand-success: #98c96c
-$brand-info: #7ac3d3
-$brand-warning: #d1d353
-$brand-danger: #dd6583
+$primary: #6b9bcd
+$success: #98c96c
+$info: #7ac3d3
+$warning: #f1d635
+$danger: #dd6583
+
+$luma-contrast-bright-color: $text
+$luma-contrast-dark-color: $reversal-text
