--- a/app/assets/stylesheets/settings/variables/_sanitize.sass
+++ b/app/assets/stylesheets/settings/variables/_sanitize.sass
@@ -1,23 +1,15 @@
-$root-background-color: $background-color
-$root-box-sizing: border-box
-$root-color: $text
-$root-cursor: default
-$root-font-family: sans-serif
-$root-font-size: 100%
-$root-line-height: 1.5
-$root-text-rendering: optimizeLegibility
+$basic-sans-serif: 'Roboto', 'Noto Sans Japanese', 'ヒラギノ角ゴ Pro W3', 'Hiragino Kaku Gothic Pro', 'メイリオ', Meiryo, Osaka, 'ＭＳ Ｐゴシック', 'MS PGothic', sans-serif
+$basic-bold-sans-serif: "ヒラギノ角ゴ StdN", "Hiragino Kaku Gothic StdN", "游ゴシック", YuGothic, "メイリオ", Meiryo, Roboto, "Droid Sans", "ヒラギノ角ゴ ProN", "Hiragino Kaku Gothic ProN", "メイリオ", Meiryo, "ＭＳ Ｐゴシック", Helvetica, Arial, Verdana, sans-serif, "ＭＳ Ｐゴシック", Helvetica, Arial, Verdana, sans-serif
 
-$anchor-text-decoration: none
-$background-repeat: no-repeat
-$form-element-background-color: transparent
-$form-element-min-height: if(unitless($root-line-height), #{$root-line-height}em, if(unit($root-line-height) != "%", $root-line-height, null))
-$media-element-vertical-align: middle
-$monospace-font-family: monospace
-$nav-list-style: none
-$selection-background-color: #B3D4FC
-$selection-color: #ffffff
-$selection-text-shadow: none
-$small-font-size: 75%
-$table-border-collapse: collapse
-$table-border-spacing: 0
-$textarea-resize: vertical
+$button-styles: border, flat-emboss
+
+$small-column-horizontal-padding: 2rem
+$xs-small-column-horizontal-padding: 1rem
+
+$grid-gutter-width: 1rem
+
+$root-font-family: $basic-sans-serif
+
+$container-max-widths: (sm: 100%, md: 100%, lg: 100%, xl: 72.25rem)
+
+$root-background-color: $background-color
