--- a/app/views/users/edit.html.slim
+++ b/app/views/users/edit.html.slim
@@ -6,5 +6,5 @@ header.page-header.is-margin-bottom-0
 .page-body
   .container
     .row
-      .col-xs-12.col-sm-6.col-sm-offset-3
+      .col-xs-12.col-sm-6.offset-sm-3
         = render 'form', user: @user, companies: @companies
