--- a/app/assets/stylesheets/blocks/_practice.sass
+++ b/app/assets/stylesheets/blocks/_practice.sass
@@ -4,7 +4,7 @@
   pre
     display: block
     overflow-x: auto
-    padding: 0.5em
+    padding: .5em
     color: #333
     background: #f8f8f8
 .practice
