--- a/app/assets/stylesheets/blocks/_practices-edit.sass
+++ b/app/assets/stylesheets/blocks/_practices-edit.sass
@@ -1,5 +1,5 @@
 .practices-edit__input
-  height: 720px
+  height: 45rem
 .practices-edit__preview
   background-color: $base-color
-  padding: 16px
+  padding: 1rem
