--- a/app/views/application/_alert.html.slim
+++ b/app/views/application/_alert.html.slim
@@ -1,8 +1,14 @@
 - if notice
-  .alert.alert-info
-    button(type="button" class="close" data-dismiss="alert") &times;
-    = notice
+  .alert.is-info
+    .container
+      .alert__container
+        button.alert__close(type="button" class="close" data-dismiss="alert") &times;
+        p.alert__message
+          = notice
 - if alert
-  .alert.alert-error
-    button(type="button" class="close" data-dismiss="alert") &times;
-    = alert
+  .alert.is-error
+    .container
+      .alert__container
+        button.alert__close(type="button" class="close" data-dismiss="alert") &times;
+        p.alert__message
+          = alert
