Ouluをアップデート

--- a/app/assets/stylesheets/_bootstrap-import.sass
+++ b/app/assets/stylesheets/_bootstrap-import.sass
@@ -5,7 +5,7 @@
 
 // Core variables and mixins
 @import bootstrap/variables
-@import bootstrap/mixins
+@import settings/custom-bootstrap/mixins
 
 // Reset and dependencies
 //@import bootstrap/normalize
@@ -32,7 +32,7 @@
 //@import bootstrap/card
 @import bootstrap/breadcrumb
 @import bootstrap/pagination
-@import bootstrap/labels
+//@import bootstrap/labels
 @import bootstrap/jumbotron
 @import bootstrap/alert
 @import bootstrap/progress
@@ -48,4 +48,4 @@
 @import bootstrap/carousel
 
 // Utility classes
-@import bootstrap/utilities
+//@import bootstrap/utilities
