--- a/app/assets/stylesheets/blocks/_mobile-global-nav.sass
+++ b/app/assets/stylesheets/blocks/_mobile-global-nav.sass
@@ -3,7 +3,7 @@
   +size(280px, 100%)
   background-color: $base-color
   display: none
-  +screen-xs
+  +media-breakpoint-down(sm)
     display: block
 .mobile-global-nav-cerrent-user
   background-color: #464646
