--- a/app/assets/stylesheets/blocks/_tab-nav.sass
+++ b/app/assets/stylesheets/blocks/_tab-nav.sass
@@ -9,7 +9,7 @@
   margin-right: .5rem
   &:last-child
     margin-right: 0
-  +screen-xs
+  +media-breakpoint-down(sm)
     margin-right: 0
 .tab-nav__item-link
   +block-link
