--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -1,10 +1,39 @@
-@import settings/variables/*
+// oulu-functions-before-variables
+@import oulu-functions-before-variables
 
-@import oulu
+//////////////////////////////
+// variables
+//////////////////////////////
+
+@import settings/variables/*
+@import oulu-variables
+// oulu-functions-after-variables (functions need variables)
+@import oulu-functions-after-variables
+//////////////////////////////
+// mixins
+//////////////////////////////
+@import oulu-mixins
+@import modules/web-fonts/font-awsome
+@import modules/buttons/buttons
+//////////////////////////////
+// initializers
+//////////////////////////////
+// oulu-initializers
+@import oulu-initializers
+//////////////////////////////
+// helpers
+//////////////////////////////
+@import oulu-helpers
+@import settings/helpers/**/*
+
+//////////////////////////////
+// style
+//////////////////////////////
+
 @import bootstrap-import
 
 @import settings/helpers/**/*
-@import settings/costom-bootstrap//**/*
+@import settings/custom-bootstrap//**/*
 @import base
 @import node_modules/highlight.js/styles/github
 @import github
