--- a/app/assets/stylesheets/settings/variables/_bootstrap.sass
+++ b/app/assets/stylesheets/settings/variables/_bootstrap.sass
@@ -43,13 +43,13 @@ $link-hover-decoration: underline
 // Define the minimum and maximum dimensions at which your layout will change,
 // adapting to different screen sizes, for use in media queries.
 
-$grid-breakpoints: (xs: 0, sm: 544px, md: 768px, lg: 992px, xl: 1200px)
+$grid-breakpoints: (xs: 0, sm: 34em, md: 48em, lg: 62em, xl: 75em) !default
 
 // Grid containers
 //
 // Define the maximum width of `.container` for different screen sizes.
 
-$container-max-widths: (sm: 576px, md: 720px, lg: 940px, xl: 1260px)
+$container-max-widths: (sm: 100%, md: 100%, lg: 100%, xl: 1260px)
 
 // Grid columns
 //
