日報へのコメント時にSlackに通知

--- a/app/views/reports/show.html.slim
+++ b/app/views/reports/show.html.slim
@@ -30,17 +30,18 @@ header.page-header
           = t('comments_count')
       - if @comments.any?
           - @comments.each do |comment|
-            .comment__description
-              = link_to comment.user, itempro: 'url', class: 'report__author-link' do
-                = gravatar_tag comment.user, size: 44, html: { class: "category-practices-item__user-icon"}
-                = t('blank')
-                = comment.user.login_name
-              = markdown comment.description
-            time.report__created-at(datetime='#{@report.created_at.to_datetime}' pubdate='pubdate')
-              = l comment.updated_at, format: :short
-              .btn-group
-                = link_to t('edit'), edit_report_comment_path(@report, comment), class: 'btn btn-primary'
-                = link_to t('destroy'), report_comment_path(@report, comment), data: { confirm: t('are_you_sure') }, method: :delete, class: 'btn btn-danger'
+            = div_for comment
+              .comment__description
+                = link_to comment.user, itempro: 'url', class: 'report__author-link' do
+                  = gravatar_tag comment.user, size: 44, html: { class: "category-practices-item__user-icon"}
+                  = t('blank')
+                  = comment.user.login_name
+                = markdown comment.description
+              time.report__created-at(datetime='#{@report.created_at.to_datetime}' pubdate='pubdate')
+                = l comment.updated_at, format: :short
+                .btn-group
+                  = link_to t('edit'), edit_report_comment_path(@report, comment), class: 'btn btn-primary'
+                  = link_to t('destroy'), report_comment_path(@report, comment), data: { confirm: t('are_you_sure') }, method: :delete, class: 'btn btn-danger'
 
       .comment__form
         = form_for ([@report, @comment]) do |f|
