--- a/app/assets/stylesheets/blocks/_report.sass
+++ b/app/assets/stylesheets/blocks/_report.sass
@@ -23,9 +23,14 @@
   +margin(horizontal, -1rem)
 .report__body
   margin-bottom: 2rem
+  li
+    list-style-type: disc
 .comment__body
   margin-top: 2rem
 .comment__description
   margin-top: 1rem
 .comment__form
   margin-top: 1rem
+.js-markdown-preview
+  li
+    list-style-type: disc
